--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
   </head>
   <body>
     <h1>This is a test for SchedGen</h1>
+    <button onClick="/client/pages/generator.html">Go to generator.</button>
   </body>
 </html>
