--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   </head>
   <body>
     <h1>This is a test for SchedGen</h1>
-    <button onClick="SchedGen.github.io/client/pages/generator.html">Go to generator.</button>
+    <button action="SchedGen.github.io/client/pages/generator.html">Go to generator.</button>
   </body>
 </html>
