--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   </head>
   <body>
     <h1>This is a test for SchedGen</h1>
-    <button action="SchedGen.github.io/client/pages/generator.html">Go to generator.</button>
+    <form action="/client/pages/generator.html>
+      <input type="Submit" id="submit">
+    </form>
   </body>
 </html>
