--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>This is a test for SchedGen</h1>
-    <button action="SchedGen.github.io/client/pages/generator.html>
+    <button action="SchedGen.github.io/client/pages/generator.html>To Generator</button>
     <form action="/client/pages/generator.html>
       <input type="Submit" id="submit">
     </form>
